# SCP_MTF_DEI_PDA

./: .gitignore  .gitmodules  CMakeLists.txt  instructions.txt  menu.txt  partitions.csv  sdkconfig
components/lzrtag_main/: CMakeLists.txt
components/lzrtag_main/core/: IR.cpp  base_weapon.cpp  beam_weapon.cpp  handler.cpp  heavy_weapon.cpp  player.cpp  setup.cpp  shot_weapon.cpp
components/lzrtag_main/fx/: ManeAnimator.cpp  PatternModeHandler.cpp  animatorThread.cpp  colorSets.cpp  mcp_access.cpp  patternModeHandling.cpp  sounds.cpp  vibrationHandler.cpp
components/lzrtag_main/fx/patterns/: BasePattern.cpp  ShotFlicker.cpp  VestPattern.cpp
components/lzrtag_main/include/: mcp_access.h
components/lzrtag_main/include/lzrtag/: LZRConfig.h  PatternModeHandler.h  animatorThread.h  colorSets.h  core_defs.h  mcp_access.h  pattern_types.h  player.h  setup.h  sounds.h  vibrationHandler.h  weapon_defs.h
components/lzrtag_main/include/lzrtag/patterns/: ShotFlicker.h
components/lzrtag_main/include/lzrtag/weapon/: base_weapon.h  beam_weapon.h  handler.h  heavy_weapon.h  shot_weapon.h
components/lzrtag_main/sounds/: raw_to_c_array.py
components/lzrtag_main/sounds/lzrtag-sfx/COLIBRI M2/: COLIBRI_M2_shot_1_raw.h  COLIBRI_M2_shot_2_raw.h  COLIBRI_M2_shot_3_raw.h  COLIBRI_M2_shot_4_raw.h  COLIBRI_M2_shot_5_raw.h  collection.h
components/lzrtag_main/sounds/lzrtag-sfx/DP-116-STEELFINGER/: DP-116-STEELFINGER_shot_10_raw.h  DP-116-STEELFINGER_shot_1_raw.h  DP-116-STEELFINGER_shot_2_raw.h  DP-116-STEELFINGER_shot_3_raw.h  DP-116-STEELFINGER_shot_4_raw.h  DP-116-STEELFINGER_shot_5_raw.h  DP-116-STEELFINGER_shot_6_raw.h  DP-116-STEELFINGER_shot_7_raw.h  DP-116-STEELFINGER_shot_8_raw.h  DP-116-STEELFINGER_shot_9_raw.h  collection.h
components/lzrtag_main/sounds/lzrtag-sfx/FN-001-WHIP/: FN-001-WHIP_shot_10_raw.h  FN-001-WHIP_shot_1_raw.h  FN-001-WHIP_shot_2_raw.h  FN-001-WHIP_shot_3_raw.h  FN-001-WHIP_shot_4_raw.h  FN-001-WHIP_shot_5_raw.h  FN-001-WHIP_shot_6_raw.h  FN-001-WHIP_shot_7_raw.h  FN-001-WHIP_shot_8_raw.h  FN-001-WHIP_shot_9_raw.h  collection.h
components/lzrtag_main/sounds/lzrtag-sfx/NICO-6/: NICO-6_shot_clean_10_raw.h  NICO-6_shot_clean_11_raw.h  NICO-6_shot_clean_12_raw.h  NICO-6_shot_clean_1_raw.h  NICO-6_shot_clean_2_raw.h  NICO-6_shot_clean_3_raw.h  NICO-6_shot_clean_5_raw.h  NICO-6_shot_clean_6_raw.h  collection.h  (+2 more)
main/: CMakeLists.txt  SCP_Foundation.c  app.cpp  app.h  audio_player.cpp  audio_player.h  cd4053b_wrapper.cpp  cd4053b_wrapper.h  component.mk  joystick.cpp  joystick.h  laser_tag.cpp  laser_tag.h  lv_conf.h  lv_font_firacode_12.c  lv_font_firacode_16.c  lv_font_firacode_4.c  lv_font_firacode_8.c  main.cpp  mcp23008_wrapper.cpp  mcp23008_wrapper.h  menu_functions.cpp  menu_functions.h  menu_log.cpp  menu_log.h  menu_structures.h  menu_visibility.cpp  menu_visibility.h  ota_manager.cpp  ota_manager.h  persistent_state.cpp  persistent_state.h  sd_manager.cpp  sd_manager.h  sd_raw_access.cpp  sd_raw_access.h  setup.cpp  setup.h  stuff.h  telescope_controller.cpp  (+5 more)
main/assets/: lv_font_firacode_14.c
(+73 files in other folders)
