idf_component_register(
    SRCS
    "assets/SCP_Foundation.c"
    "assets/lv_font_firacode_4.c"
    "assets/lv_font_firacode_8.c"
    "assets/lv_font_firacode_12.c"
    "assets/lv_font_firacode_14.c"
    "assets/lv_font_firacode_16.c"
    "ui_manager.cpp"
    "sd_manager.cpp"
    "audio_player.cpp"
    "main.cpp"
    "setup.cpp"
    "ota_manager.cpp"
    "cd4053b_wrapper.cpp"
    "joystick.cpp"
    "telescope_controller.cpp"
    "menu_functions.cpp"
    "laser_tag.cpp"
    "menu_log.cpp"
    "persistent_state.cpp"
    "menu_visibility.cpp"
    "telescope_game.cpp"
    INCLUDE_DIRS "."
)
